--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "Handling error returns.",
     "type": "library",
     "require": {
-        "php": "^7.2"
+        "php": "^7.2 || ^8.0"
     },
     "license": "MIT",
     "autoload": {
